--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.6.0
 anyio==4.3.0
+bcrypt==4.1.2
 click==8.1.7
 fastapi==0.110.0
+fastapi-jwt-auth2==0.5.0
 h11==0.14.0
 idna==3.6
 mysqlclient==2.1.0
@@ -9,6 +11,8 @@ passlib==1.7.4
 peewee==3.17.1
 pydantic==2.6.3
 pydantic_core==2.16.3
+pydantic_settings==2.2.1
+PyJWT==1.7.1
 setuptools==69.1.1
 sniffio==1.3.1
 starlette==0.36.3
