--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+amqp==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
 bcrypt==4.1.2
+celery==5.3.6
 click==8.1.7
 fastapi==0.110.0
 fastapi-jwt-auth2==0.5.0
