--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ fastapi==0.110.0
 fastapi-jwt-auth2==0.5.0
 h11==0.14.0
 idna==3.6
+ipdata==4.0.6
 mysqlclient==2.1.0
 passlib==1.7.4
 peewee==3.17.1
